# Mongez

./: .gitignore  DEVELOPMENT.md  implementation_plan.md  package-lock.json  package.json  page_audit_report.md  push.bat  subagent_content_27.txt
ai-service/: .env.example  .gitignore  Dockerfile  pyproject.toml
ai-service/app/: __init__.py  config.py  dependencies.py  main.py
ai-service/app/agents/: __init__.py  graph.py  registry.py  scheduler.py  state.py
ai-service/app/agents/nodes/: aggregator.py  calendar_intelligence.py  chat_responder.py  executor.py  human_gate.py  intent_router.py  query_rewriter.py  recommendation.py  report_generator.py  risk_detector.py
ai-service/app/cache/: __init__.py  response_cache.py
ai-service/app/clients/: llm_client.py  nestjs_client.py
ai-service/app/monitoring/: metrics.py
ai-service/app/prompts/: __init__.py  aggregator_calendar_v1.0.txt  aggregator_chat_v1.0.txt  aggregator_report_v1.0.txt  aggregator_risk_v1.0.txt  calendar_intelligence_v1.0.txt  chat_assistant_v1.0.txt  loader.py  query_rewriter_v1.0.txt  report_generator_v1.0.txt  risk_detector_v1.0.txt
ai-service/app/rag/: __init__.py  chunker.py  compressor.py  embedder.py  indexer.py  retriever.py
ai-service/app/utils/: circuit_breaker.py  correlation.py  json_parser.py
ai-service/scripts/: test_integrations.py  test_phase2.py  test_phase3.py  test_phase4.py
ai-service/tests/: __init__.py  conftest.py  mock_data.py  test_ai_eval.py  test_ai_safety.py  test_api_endpoints.py  test_graph_routing.py  test_integration_behavior.py  test_prompt_loader.py
(+906 files in other folders)
