[project]
name = "mongez-ai-service"
version = "0.1.0"
description = "Mongez AI Service — LangGraph agent orchestration"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # LLM / Agent framework
    "langchain>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-groq>=0.2.0",
    "langsmith>=0.1.0",
    "openai>=1.0.0",

    # Vector DB
    "qdrant-client>=1.12.0",

    # Embeddings (runs on CPU)
    "sentence-transformers>=3.0.0",

    # HTTP client (for calling NestJS)
    "httpx>=0.27.0",

    # Config
    "pydantic-settings>=2.5.0",

    # Redis
    "redis>=5.0.0",

    # Monitoring
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
